Create initial Cinnamon Roll recipe page

--- a/recipes/cinnamon-roll.html
+++ b/recipes/cinnamon-roll.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1> 
-    <a href = "recipes/cinnamon-roll.html">Easy Homemade Cinnamon Rolls</a>
+    "Cinnamon Rolls"
 </body>
 </html>
