--- a/recipes/cinnamon-roll.html
+++ b/recipes/cinnamon-roll.html
@@ -7,6 +7,38 @@
     <title>Document</title>
 </head>
 <body>
-    "Cinnamon Rolls"
+    <h1>Cinnamon Rolls</h1>
+    <img src="cinnaroll.webp" alt="An image of the completed cinnamon roll">
+    <h2>Easy homemade cinnamon rolls using ingredients you already have at home!</h2>
+    <p>This recipe allows us to skip the first rise, meaning it is fast, and easy to do all in one night.
+        Makes 12 cinnamon rolls, and takes 1 hr 20 minutes to complete.
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <list>1 cup milk</list>
+        <list>1/3 cup butter</list>
+        <list>2 eggs, room temperature</list>
+        <list>4 cups bread flour, divided</list>
+        <list>1/2 cup white sugar</list>
+        <list>2 1/2 teaspoons rapid-rise yeast</list>
+        <list>1 teaspoon salt</list>
+        <list>1 teaspoon vegetable oil</list>
+        <list>3/4 cup packed brown sugar</list>
+        <list>2 1/2 tablespoons ground cinnamon</list>
+        <list>1/3 cup butter, softened</list>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <list>Heat milk and uhh... just get it to 120-130 degrees</list>
+        <list>Whisk eggs, adding small amounts of milk, then pour mixture into the bowl of a stand mixer</list>
+        <list>Mix 3 cups flour, sugar, yeast, salt in a large bowl. Add to milk mixture and beat on slow speed using dough hook</list>
+        <list>Add remaining flour slowly, 1 tablespoon at a time, until dough begins to ball up. Knead until dough looks smooth, 7-10 minutes</list>
+        <list>Pour vegetable oil over dough and turn to coat. Cover and let rest for 10 minutes.</list>
+        <list>Turn dough out onto a lightly floured surface, and beat it into a rectable</list>
+        <list>Mix brown sugar and cinnamon in a small bowl. Spread the softened butter on the dough, then sprinkle the cinnasugar onto it. Cut into 12 pieces</list>
+        <list>Place rolls, cut-side down and almost touching, into a pan and cover, let rise until doubled, 30-40 minutes</list>
+        <list>Preheat the over to 400 degs Fs</list>
+        <list>Bake until golden, 15-20 minutes. Remove from oven and turn out onto tray or plate. Cover with frosting of choice</list>
+    </ol>
 </body>
 </html>
