Change <list> to <li>

--- a/recipes/cinnamon-roll.html
+++ b/recipes/cinnamon-roll.html
@@ -15,30 +15,30 @@
     </p>
     <h3>Ingredients</h3>
     <ul>
-        <list>1 cup milk</list>
-        <list>1/3 cup butter</list>
-        <list>2 eggs, room temperature</list>
-        <list>4 cups bread flour, divided</list>
-        <list>1/2 cup white sugar</list>
-        <list>2 1/2 teaspoons rapid-rise yeast</list>
-        <list>1 teaspoon salt</list>
-        <list>1 teaspoon vegetable oil</list>
-        <list>3/4 cup packed brown sugar</list>
-        <list>2 1/2 tablespoons ground cinnamon</list>
-        <list>1/3 cup butter, softened</list>
+        <li>1 cup milk</li>
+        <li>1/3 cup butter</li>
+        <li>2 eggs, room temperature</li>
+        <li>4 cups bread flour, divided</li>
+        <li>1/2 cup white sugar</li>
+        <li>2 1/2 teaspoons rapid-rise yeast</li>
+        <li>1 teaspoon salt</li>
+        <li>1 teaspoon vegetable oil</li>
+        <li>3/4 cup packed brown sugar</li>
+        <li>2 1/2 tablespoons ground cinnamon</li>
+        <li>1/3 cup butter, softened</li>
     </ul>
     <h3>Steps</h3>
     <ol>
-        <list>Heat milk and uhh... just get it to 120-130 degrees</list>
-        <list>Whisk eggs, adding small amounts of milk, then pour mixture into the bowl of a stand mixer</list>
-        <list>Mix 3 cups flour, sugar, yeast, salt in a large bowl. Add to milk mixture and beat on slow speed using dough hook</list>
-        <list>Add remaining flour slowly, 1 tablespoon at a time, until dough begins to ball up. Knead until dough looks smooth, 7-10 minutes</list>
-        <list>Pour vegetable oil over dough and turn to coat. Cover and let rest for 10 minutes.</list>
-        <list>Turn dough out onto a lightly floured surface, and beat it into a rectable</list>
-        <list>Mix brown sugar and cinnamon in a small bowl. Spread the softened butter on the dough, then sprinkle the cinnasugar onto it. Cut into 12 pieces</list>
-        <list>Place rolls, cut-side down and almost touching, into a pan and cover, let rise until doubled, 30-40 minutes</list>
-        <list>Preheat the over to 400 degs Fs</list>
-        <list>Bake until golden, 15-20 minutes. Remove from oven and turn out onto tray or plate. Cover with frosting of choice</list>
+        <li>Heat milk and uhh... just get it to 120-130 degrees</li>
+        <li>Whisk eggs, adding small amounts of milk, then pour mixture into the bowl of a stand mixer</li>
+        <li>Mix 3 cups flour, sugar, yeast, salt in a large bowl. Add to milk mixture and beat on slow speed using dough hook</li>
+        <li>Add remaining flour slowly, 1 tablespoon at a time, until dough begins to ball up. Knead until dough looks smooth, 7-10 minutes</li>
+        <li>Pour vegetable oil over dough and turn to coat. Cover and let rest for 10 minutes.</li>
+        <li>Turn dough out onto a lightly floured surface, and beat it into a rectable</li>
+        <li>Mix brown sugar and cinnamon in a small bowl. Spread the softened butter on the dough, then sprinkle the cinnasugar onto it. Cut into 12 pieces</li>
+        <li>Place rolls, cut-side down and almost touching, into a pan and cover, let rise until doubled, 30-40 minutes</li>
+        <li>Preheat the over to 400 degs Fs</li>
+        <li>Bake until golden, 15-20 minutes. Remove from oven and turn out onto tray or plate. Cover with frosting of choice</li>
     </ol>
 </body>
 </html>
