--- a/recipes/cinnamon-roll.html
+++ b/recipes/cinnamon-roll.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Cinnamon Rolls</h1>
-    <img src="cinnaroll.webp" alt="An image of the completed cinnamon roll">
+    <img src="../images/cinnaroll.webp" alt="An image of the completed cinnamon roll">
     <h2>Easy homemade cinnamon rolls using ingredients you already have at home!</h2>
     <p>This recipe allows us to skip the first rise, meaning it is fast, and easy to do all in one night.
         Makes 12 cinnamon rolls, and takes 1 hr 20 minutes to complete.
