Add finished page for Glazed Salmon recipe

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1> 
     <a href = "recipes/cinnamon-roll.html">Easy Homemade Cinnamon Rolls</a>
+    <a href = "recipes/glazed-salmon.html">Quick and Easy Glazed Salmon</a>
 </body>
 </html>
