Add finished Baked Potato recipe page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Odin Recipes</h1> 
     <a href = "recipes/cinnamon-roll.html">Easy Homemade Cinnamon Rolls</a>
     <a href = "recipes/glazed-salmon.html">Quick and Easy Glazed Salmon</a>
+    <a href = "recipes/baked-potato.html">The Perfect Baked Potato</a>
 </body>
 </html>
