Add css to all recipe pages

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1> 
-    <a href = "recipes/cinnamon-roll.html">Easy Homemade Cinnamon Rolls</a>
-    <a href = "recipes/glazed-salmon.html">Quick and Easy Glazed Salmon</a>
-    <a href = "recipes/baked-potato.html">The Perfect Baked Potato</a>
+    <h1>--Odin Recipes--</h1> 
+    <div>
+        <e>|</e>
+        <a href = "recipes/cinnamon-roll.html" class="cinna">Easy Homemade Cinnamon Rolls</a>
+        <e>|</e>
+        <a href = "recipes/glazed-salmon.html" class="salmon">Quick and Easy Glazed Salmon</a>
+        <e>|</e>
+        <a href = "recipes/baked-potato.html" class="potato">The Perfect Baked Potato</a>
+        <e>|</e>
+    </div>  
 </body>
 </html>
