--- a/recipes/baked-potato.html
+++ b/recipes/baked-potato.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,19 +12,20 @@
     <img src = "../images/baked-potato.jpeg" alt = "An image of the finished Baked Potato dish">
     <h2>The perfect quick and easy baked potato</h2>
     <p>This recipe makes a baked potato! Enjoy with the whole family! Makes 1 serving.</p>
+    <hr>
     <h3>Ingredients</h3>
     <ul>
-        <li>1 medium baked potato</li>
-        <li>1 teaspoon olive oil</li>
-        <li>1/2 teaspoon salt</li>
-        <li>2 teaspoons butter</li>
-        <li>1 pinch freshly ground black pepper</li>
-        <li>1/4 cup shredded Cheddar cheese</li>
+        <li class="odd">1 medium baked potato</li>
+        <li class="even">1 teaspoon olive oil</li>
+        <li class="odd">1/2 teaspoon salt</li>
+        <li class="even">2 teaspoons butter</li>
+        <li class="odd">1 pinch freshly ground black pepper</li>
+        <li class="even">1/4 cup shredded Cheddar cheese</li>
     </ul>
     <h3>Steps</h3>
     <ol>
-        <li>Preheat the oven to 300 degrees F. Scrub the potato, piece the skin several times with a knife or fork. Rub the skin with olive oil, then with salt</li>
-        <li>Place the potato in the preheated oven, and bake until slightly soft and golden brown, about 90 minutes. Slice the potato down the center, and serve with butter and black pepper. Sprinkle shredded Cheddar cheese over the top, if desired</li>
+        <li class="odd">Preheat the oven to 300 degrees F. Scrub the potato, piece the skin several times with a knife or fork. Rub the skin with olive oil, then with salt</li>
+        <li class="even">Place the potato in the preheated oven, and bake until slightly soft and golden brown, about 90 minutes. Slice the potato down the center, and serve with butter and black pepper. Sprinkle shredded Cheddar cheese over the top, if desired</li>
     </ol>
 </body>
 </html>
