--- a/recipes/cinnamon-roll.html
+++ b/recipes/cinnamon-roll.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,32 +14,33 @@
     <p>This recipe allows us to skip the first rise, meaning it is fast, and easy to do all in one night.
         Makes 12 cinnamon rolls, and takes 1 hr 20 minutes to complete.
     </p>
+    <hr>
     <h3>Ingredients</h3>
     <ul>
-        <li>1 cup milk</li>
-        <li>1/3 cup butter</li>
-        <li>2 eggs, room temperature</li>
-        <li>4 cups bread flour, divided</li>
-        <li>1/2 cup white sugar</li>
-        <li>2 1/2 teaspoons rapid-rise yeast</li>
-        <li>1 teaspoon salt</li>
-        <li>1 teaspoon vegetable oil</li>
-        <li>3/4 cup packed brown sugar</li>
-        <li>2 1/2 tablespoons ground cinnamon</li>
-        <li>1/3 cup butter, softened</li>
+        <li class="odd">1 cup milk</li>
+        <li class="even">1/3 cup butter</li>
+        <li class="odd">2 eggs, room temperature</li>
+        <li class="even">4 cups bread flour, divided</li>
+        <li class="odd">1/2 cup white sugar</li>
+        <li class="even">2 1/2 teaspoons rapid-rise yeast</li>
+        <li class="odd">1 teaspoon salt</li>
+        <li class="even">1 teaspoon vegetable oil</li>
+        <li class="odd">3/4 cup packed brown sugar</li>
+        <li class="even">2 1/2 tablespoons ground cinnamon</li>
+        <li class="odd">1/3 cup butter, softened</li>
     </ul>
     <h3>Steps</h3>
     <ol>
-        <li>Heat milk and uhh... just get it to 120-130 degrees</li>
-        <li>Whisk eggs, adding small amounts of milk, then pour mixture into the bowl of a stand mixer</li>
-        <li>Mix 3 cups flour, sugar, yeast, salt in a large bowl. Add to milk mixture and beat on slow speed using dough hook</li>
-        <li>Add remaining flour slowly, 1 tablespoon at a time, until dough begins to ball up. Knead until dough looks smooth, 7-10 minutes</li>
-        <li>Pour vegetable oil over dough and turn to coat. Cover and let rest for 10 minutes.</li>
-        <li>Turn dough out onto a lightly floured surface, and beat it into a rectable</li>
-        <li>Mix brown sugar and cinnamon in a small bowl. Spread the softened butter on the dough, then sprinkle the cinnasugar onto it. Cut into 12 pieces</li>
-        <li>Place rolls, cut-side down and almost touching, into a pan and cover, let rise until doubled, 30-40 minutes</li>
-        <li>Preheat the over to 400 degs Fs</li>
-        <li>Bake until golden, 15-20 minutes. Remove from oven and turn out onto tray or plate. Cover with frosting of choice</li>
+        <li class="odd">Heat milk and uhh... just get it to 120-130 degrees</li>
+        <li class="even">Whisk eggs, adding small amounts of milk, then pour mixture into the bowl of a stand mixer</li>
+        <li class="odd">Mix 3 cups flour, sugar, yeast, salt in a large bowl. Add to milk mixture and beat on slow speed using dough hook</li>
+        <li class="even">Add remaining flour slowly, 1 tablespoon at a time, until dough begins to ball up. Knead until dough looks smooth, 7-10 minutes</li>
+        <li class="odd">Pour vegetable oil over dough and turn to coat. Cover and let rest for 10 minutes.</li>
+        <li class="even">Turn dough out onto a lightly floured surface, and beat it into a rectable</li>
+        <li class="odd">Mix brown sugar and cinnamon in a small bowl. Spread the softened butter on the dough, then sprinkle the cinnasugar onto it. Cut into 12 pieces</li>
+        <li class="even">Place rolls, cut-side down and almost touching, into a pan and cover, let rise until doubled, 30-40 minutes</li>
+        <li class="odd">Preheat the over to 400 degs Fs</li>
+        <li class="even">Bake until golden, 15-20 minutes. Remove from oven and turn out onto tray or plate. Cover with frosting of choice</li>
     </ol>
 </body>
 </html>
