--- a/recipes/glazed-salmon.html
+++ b/recipes/glazed-salmon.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,22 +12,22 @@
     <img src="../images/glazed-salmon.webp" alt="An image of the finished salmon dish">
     <h2>Quick, easy grilled salmon</h2>
     <p>Fast delicious salmon you can make with only a couple ingredients! Takes an hour and 10 minutes, serves 6.</p>
-
+    <hr>
     <h3>Ingredients</h3>
     <ul>
-        <li>2 tablespoons dark brown sugar</li>
-        <li>2 tablespoons apple cider vinegar</li>
-        <li>2 tablespoons olive oil</li>
-        <li>1 teaspoon Dijon mustard</li>
-        <li>1/2 teaspoon coarsely ground black pepper</li>
-        <li>6 (3 ounce) salmon fillets, thawed</li>
+        <li class="odd">2 tablespoons dark brown sugar</li>
+        <li class="even">2 tablespoons apple cider vinegar</li>
+        <li class="odd">2 tablespoons olive oil</li>
+        <li class="even">1 teaspoon Dijon mustard</li>
+        <li class="odd">1/2 teaspoon coarsely ground black pepper</li>
+        <li class="even">6 (3 ounce) salmon fillets, thawed</li>
     </ul>
     <h3>Steps</h3>
     <ol>
-        <li>Combine brown sugar, apple cider vinegar, olive oil, Dijon mustard, and pepper in a bowl for the marinade</li>
-        <li>Place salmon fillets into a shallow glass dish and pour 1/2 of the marinade over the fish. Reserve the remaining marinade. Cover and refrigerate for 1 hour.</li>
-        <li>Preheat the outdoor grill for medium heat and lightly oil the grate. Discard marinade from the glass dish</li>
-        <li>Grill salmon, brushing with the reserved marinade several times, until it flakes easily with a fork, 4-6 minutes</li>
+        <li class="odd">Combine brown sugar, apple cider vinegar, olive oil, Dijon mustard, and pepper in a bowl for the marinade</li>
+        <li class="even">Place salmon fillets into a shallow glass dish and pour 1/2 of the marinade over the fish. Reserve the remaining marinade. Cover and refrigerate for 1 hour.</li>
+        <li class="odd">Preheat the outdoor grill for medium heat and lightly oil the grate. Discard marinade from the glass dish</li>
+        <li class="even">Grill salmon, brushing with the reserved marinade several times, until it flakes easily with a fork, 4-6 minutes</li>
     </ol>
 
 </body>
